fixing clicking cell on mobile

--- a/game-client/index.css
+++ b/game-client/index.css
@@ -61,10 +61,14 @@ body,
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: not-allowed;
+  cursor: pointer;
   width: 100%;
   height: 100%;
   position: relative;
+}
+
+.gamearea div.inactive {
+  cursor: pointer;
 }
 
 .gamearea div.inactive:hover {
